- fix wrong handling of insert's name attribute. (messju)
- fix false replacement of "$t" inside double quotes (checat, messju)
- added support for column headings and caption element to html_table and
  updated the output to use thead/tbody elements (boots)
- fixed ordering of replacements in trimwhitespace output filter (Getty, boots)
- update mailto function plugin to work around a firefox/thunderbird
  escaping bug (elijahlofgren, boots)
- emulate %l in the date_format modifier on windows (boots) 
- fix handling of apostrophes in capitalize modifier (Alec Smecher, boots)

Version 2.6.14 (May 28th, 2006)
-------------------------------
- fix compiler bug allowing php tags in secure templates
  (boots,monte)
- un-hide hidden xml open tags (boots)
- fix handling of block-methods of registered objects (El Hombre Gris,
  messju)

Version 2.6.13 (March 9th, 2006)
--------------------------------

 - update regex_replace, removing possible use of "e" modifier

Version 2.6.12 (Jan 18th, 2006)
-------------------------------

 - fix improper use of references in the compiler handling cached
   attributes and in compiled code handling block plugins (messju)
 - make Smarty::_read_file() work on latest php (messju)
 - fixed improper tokenization of certain inline math expressions (boots)

Version 2.6.11 (Dec 14, 2005)
-----------------------------

 - fixed code generation of non-cacheable blocks to play well with php's
   "Alternative syntax for control structures" (kihara, messju)
 - fix handling of multiple identical inserts in one display()-call (messju)
 - replace {} string access with equivalent substr() to avoid E_STRICT
   warnings in PHP 5.1 (boots)
 - return valid reference in get_config_vars() when given var is
   non-existant (Thomas Schulz, boots)
 - plugin html_image: fix incorrect secure_dir error when
   file doesn't exist (monte)
 - plugin html_image: add path_prefix param (monte)
 - add char_set parameter to escape modifier (Loading, monte)